RIVER-301: merged additional changes from skunk/jcosters branch
git-svn-id: https://svn.apache.org/repos/asf/incubator/river/jtsk/trunk@766477 13f79535-47bb-0310-9956-ffa450edef68